--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,7 +2,12 @@ html{
     box-sizing: border-box;
     font-size: 100%;
 }
+body{
+    background: linear-gradient(145deg, #D0D9F2 15%, #f2dac4c0, #a4e9f8bb);
+    background-size: 100vw 100vh;
+}
 h1{
+    margin-top: 6vh;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
     text-transform: uppercase;
@@ -14,31 +19,36 @@ h1{
     max-width: fit-content;
     display: block;
     margin: auto;
-    background-color: #dddddd;
     padding: 2%;
     padding-top: 1%;
     border-radius: 5px;
     box-shadow: #20202070 2px 2px 5px;
+    padding-bottom: 2.5rem;
+    background:inherit;
+    margin-top: 5vh;
 }
 .container h2{
     font-size: 1.2em;
     font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
 }
 span{
     display: block;
-    background-color: red;
+    background-color: #716FA6;
     padding: 5px;
-    color:  #f4f4f4;;
+    border-radius: 5px;
+    color:  #ffffff;;
     width: max-content;
     margin: auto;
-    margin-bottom: 10px;
 }
-input[type=text]{
+#task{
     border-radius: 6px;
     border: solid #909090 1px;
     text-align: center;
     padding: 5px;
+    margin-top: 25px;
     width: 70%;
+    margin-left: 30px;
 }
 input[type=submit]{
     font-size: 16px;
@@ -48,23 +58,48 @@ input[type=submit]{
     width: 30px;
 }
 input[type=submit]:hover{
-    background-color: #8b8b8b;
+    background-color: #716FA6;
     color: #f4f4f4;
     cursor: pointer;
 }
+.delete{
+    padding: 6px;
+}
 ul {
     list-style: none;
-    background-color: #f4f4f4;
+    width: 70%;
     color: #202020;
     padding: 0%;
+    margin: auto;
+    margin-top:15px;
+  
 }
-li{
+ul li{
     min-width: max-content;
-    margin-bottom: 20px;
+    background-color: #5e5c8f1f;
+    color: #202020;
+    border-radius: 3px;
+    padding: 5px;
+    font-size: 1em;
+    margin-bottom: 1em;  
+}
+ul li:hover{
+    transform: translateY(3px);
+    transition:smooth 0.5s;
 }
 button[type=reset]{
+    background: white;
     margin: auto;
     display: none;
+    font-size: 1em;
+    border-radius: 5px;
+    border: solid #ddd 1px;
+    padding: 4px;
+}
+button[type=reset]:hover{
+    background-color: #716FA6;
+    color: #f4f4f4;
+    cursor: pointer;
 }
 .delete{
     float: right;
@@ -74,4 +109,29 @@ button[type=reset]{
 }
 .isChecked{
  text-decoration: line-through;
+color: #F2DAC4;
+}
+footer{
+    font-size: 10px;
+    color: #909090;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+footer a{
+    color: #6b6b6b;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #716FA6;
+}
+@media (max-width: 900px) {
+    #task{
+        width: 50%;
+        margin-left: 0px;
+        padding:6px;
+    }
+    #task::placeholder{
+        font-size: 10px;
+    }
 }
