--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,29 +3,29 @@ html{
     font-size: 100%;
 }
 body{
-    background: linear-gradient(145deg, #D0D9F2 15%, #f2dac4c0, #a4e9f8bb);
+    background: linear-gradient(140deg, #D0D9F2 15%, #f2dac4c0, #ace4f2d3);
     background-size: 100vw 100vh;
+    text-transform: uppercase;
+    overflow: hidden; 
 }
 h1{
-    margin-top: 6vh;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2em;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
     text-transform: uppercase;
     text-align: center;
+    color: #4d475e;
 }
 .container{
     text-align: center;
     min-width: 30vw;
-    max-width: fit-content;
+    max-width: max-content;
     display: block;
     margin: auto;
     padding: 2%;
     padding-top: 1%;
     border-radius: 5px;
     box-shadow: #20202070 2px 2px 5px;
-    padding-bottom: 2.5rem;
     background:inherit;
-    margin-top: 5vh;
 }
 .container h2{
     font-size: 1.2em;
@@ -33,22 +33,30 @@ h1{
     display: inline-block;
 }
 span{
+    font-family: 'Patrick Hand', cursive;
     display: block;
     background-color: #716FA6;
     padding: 5px;
     border-radius: 5px;
-    color:  #ffffff;;
+    color:  #ffffff;
     width: max-content;
     margin: auto;
 }
 #task{
-    border-radius: 6px;
-    border: solid #909090 1px;
+    border-radius:4px;
+    font-size: 1em;
+    border: solid 1px #897ea679;
     text-align: center;
     padding: 5px;
     margin-top: 25px;
     width: 70%;
-    margin-left: 30px;
+}
+#task::placeholder{
+    font-family: 'Patrick Hand', cursive;
+    color: #897EA6;
+}
+#task:enabled{
+    color: #897EA6;
 }
 input[type=submit]{
     font-size: 16px;
@@ -62,33 +70,32 @@ input[type=submit]:hover{
     color: #f4f4f4;
     cursor: pointer;
 }
-.delete{
-    padding: 6px;
-}
 ul {
     list-style: none;
-    width: 70%;
+    width: 25vw;
     color: #202020;
     padding: 0%;
     margin: auto;
     margin-top:15px;
-  
 }
 ul li{
-    min-width: max-content;
-    background-color: #5e5c8f1f;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    background-color: #ffffff4b;
     color: #202020;
-    border-radius: 3px;
+    border-radius: 1px;
     padding: 5px;
     font-size: 1em;
     margin-bottom: 1em;  
 }
 ul li:hover{
-    transform: translateY(3px);
+    transform: translateY(1px);
     transition:smooth 0.5s;
 }
 button[type=reset]{
-    background: white;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    background-color: #ffffff4b;
     margin: auto;
     display: none;
     font-size: 1em;
@@ -103,15 +110,27 @@ button[type=reset]:hover{
 }
 .delete{
     float: right;
+    font-size: 12px;
+    border-radius: 5px;
+    background: inherit;
+    border: solid #909090b9 1px;
+    padding: 4px;
+    width: 25px;
+}
+.delete:hover{
+    background-color: #716FA6;
+    color: #f4f4f4;
+    cursor: pointer;
 }
 .checked{
   float: left;
 }
 .isChecked{
  text-decoration: line-through;
-color: #F2DAC4;
+color: #E0BFAD;
 }
 footer{
+    font-family: 'Patrick Hand', cursive;
     font-size: 10px;
     color: #909090;
     width: 100%;
@@ -126,12 +145,24 @@ footer a:hover{
     color: #716FA6;
 }
 @media (max-width: 900px) {
+    ul{
+        width: 70vw;
+    }
+    ul li{
+        font-size: 1em;
+        margin: auto;
+        margin-bottom: 10px;
+       min-width:45vw;
+    }
     #task{
         width: 50%;
         margin-left: 0px;
         padding:6px;
     }
     #task::placeholder{
-        font-size: 10px;
+        font-size: 1em;
+    }
+    #resetBtn{
+        margin-top: 20px;
     }
 }
