--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,190 +1,194 @@
-html{
-    box-sizing: border-box;
-    font-size: 100%;
+html {
+  box-sizing: border-box;
+  font-size: 100%;
 }
-body{
-    background: linear-gradient(140deg, #D0D9F2 15%, #f2dac4c0, #ace4f2d3);
-    background-size: 100vw 100vh;
-    text-transform: uppercase;
-    overflow: auto; 
+body {
+  background: linear-gradient(140deg, #d0d9f2 15%, #f2dac4c0, #ace4f2d3);
+  background-size: 100vw 100vh;
+  text-transform: uppercase;
+  overflow: auto;
 }
-h1{
-    font-family: 'Oswald', sans-serif;
-    font-size: 2.5em;
-    text-transform: uppercase;
-    text-align: center;
-    color: #4d475e;
+h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.5em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #4d475e;
 }
-.container{
-    text-align: center;
-    min-width: 30vw;
-    max-width: max-content;
-    display: block;
-    margin: auto;
-    padding: 2%;
-    padding-top: 1%;
-    border-radius: 5px;
-    box-shadow: #20202070 2px 2px 5px;
-    background:inherit;
+*:focus {
+  outline: thin dotted;
 }
-.container h2{
-    font-size: 1.2em;
-    font-family: Arial, Helvetica, sans-serif;
-    display: inline-block;
+.container {
+  text-align: center;
+  min-width: 30vw;
+  max-width: max-content;
+  display: block;
+  margin: auto;
+  padding: 2%;
+  padding-top: 1%;
+  border-radius: 5px;
+  box-shadow: #20202070 2px 2px 5px;
+  background: inherit;
 }
-span{
-    font-family: 'Patrick Hand', cursive;
-    display: block;
-    background-color: #716FA6;
-    padding: 5px;
-    border-radius: 5px;
-    color:  #ffffff;
-    width: max-content;
-    margin: auto;
+.container h2 {
+  font-size: 1.2em;
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
 }
-#task{
-    border-radius:4px;
-    font-size: 1em;
-    border: solid 1px #897ea679;
-    text-align: center;
-    padding: 5px;
-    margin-top: 25px;
-    width: 70%;
+span {
+  font-family: 'Patrick Hand', cursive;
+  display: block;
+  background-color: #716fa6;
+  padding: 5px;
+  border-radius: 5px;
+  color: #ffffff;
+  width: max-content;
+  margin: auto;
 }
-#task::placeholder{
-    font-family: 'Patrick Hand', cursive;
-    color: #897EA6;
+#task {
+  background: inherit;
+  font-size: 1rem;
+  border: none;
+  border-bottom: solid 2px #221e2b79;
+  text-align: center;
+  padding: 5px;
+  margin-top: 25px;
+  width: 70%;
 }
-#task:enabled{
-    color: #897EA6;
+#task::placeholder {
+  font-family: 'Patrick Hand', cursive;
+  color: #897ea6;
 }
-input[type=submit]{
-    font-size: 16px;
-    border-radius: 5px;
-    border: solid #909090 1px;
-    padding: 4px;
-    width: 30px;
-}
-input[type=submit]:hover{
-    background-color: #716FA6;
-    color: #f4f4f4;
-    cursor: pointer;
-}
-ul {
-    list-style: none;
-    width: 25vw;
-    color: #202020;
-    padding: 0%;
-    margin: auto;
-    margin-top:15px;
-}
-ul li{
-    min-width: max-content;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    background-color: #ffffff4b;
-    color: #202020;
-    border-radius: 1px;
-    padding: 5px;
-    font-size: 1em;
-    margin-bottom: 1em;  
-}
-ul li:hover{
-    transform: translateY(1px);
-    transition:smooth 0.5s;
-}
-button[type=reset]{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    background-color: #ffffff4b;
-    margin: auto;
-    display: none;
-    font-size: 1em;
-    border-radius: 5px;
-    border: solid #ddd 1px;
-    padding: 4px;
-}
-button[type=reset]:hover{
-    background-color: #716FA6;
-    color: #f4f4f4;
-    cursor: pointer;
+#task:enabled {
+  color: #897ea6;
 }
 
-.delete{
-    float: right;
-    margin-left: 5px;
-    font-size: 14px;
-    border-radius: 5px;
-    background: inherit;
-    border: solid #909090b9 1px;
-    padding: 4px;
-    width: 25px;
+input[type='submit'] {
+  font-size: 16px;
+  border-radius: 5px;
+  border: solid #909090 1px;
+  padding: 4px;
+  width: 30px;
 }
-.delete:hover{
-    background-color: #716FA6;
-    color: #f4f4f4;
-    cursor: pointer;
+input[type='submit']:hover {
+  background-color: #716fa6;
+  color: #f4f4f4;
+  cursor: pointer;
 }
-.checked{
+ul {
+  list-style: none;
+  width: 25vw;
+  color: #202020;
+  padding: 0%;
+  margin: auto;
+  margin-top: 15px;
+}
+ul li {
+  min-width: max-content;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
+  background-color: #ffffff4b;
+  color: #202020;
+  border-radius: 1px;
+  padding: 5px;
+  font-size: 1em;
+  margin-bottom: 1em;
+}
+ul li:hover {
+  transform: translateY(1px);
+  transition: smooth 0.5s;
+}
+button[type='reset'] {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
+  background-color: #ffffff4b;
+  margin: auto;
+  display: none;
+  font-size: 1em;
+  border-radius: 5px;
+  border: solid #ddd 1px;
+  padding: 4px;
+}
+button[type='reset']:hover {
+  background-color: #716fa6;
+  color: #f4f4f4;
+  cursor: pointer;
+}
+
+.delete {
+  float: right;
+  margin-left: 5px;
+  font-size: 14px;
+  border-radius: 5px;
+  background: inherit;
+  border: solid #909090b9 1px;
+  padding: 4px;
+  width: 25px;
+}
+.delete:hover {
+  background-color: #716fa6;
+  color: #f4f4f4;
+  cursor: pointer;
+}
+.checked {
   float: left;
 }
-.isChecked{
- text-decoration: line-through;
- color: #716FA6;
+.isChecked {
+  text-decoration: line-through;
+  color: #716fa6;
 }
-footer{
-    font-family: 'Patrick Hand', cursive;
-    font-size: 10px;
-    color: #909090;
-    width: 100%;
-    position: relative;
-   text-align: center;
- 
+footer {
+  font-family: 'Patrick Hand', cursive;
+  font-size: 10px;
+  color: #909090;
+  width: 100%;
+  position: relative;
+  text-align: center;
 }
-footer a{
-    color: #6b6b6b;
-    text-decoration: none;
+footer a {
+  color: #6b6b6b;
+  text-decoration: none;
 }
-footer a:hover{
-    color: #716FA6;
+footer a:hover {
+  color: #716fa6;
 }
-@media(max-width: 1280px) {
-    .container{
-        min-width: 70vw;
-        max-width: max-content;
-    }
-    input[type=submit]{
-        padding: 7px;
-    }
-    span{
-        font-size: 0.8em;
-    }
-    #task{
-        width: 50%;
-        margin-left: 0px;
-        padding:8px;
-    }
-    #task::placeholder{
-        font-size: 0.8em;
-    }
-    ul{
-        min-width: max-content;
-    }
-    ul li{
-        font-size: 0.8em;
-        margin: auto;
-        margin-bottom: 10px;
-       min-width:45vw;
-    }
-    .delete{
-        margin-left: 5px;
-    }
-    #resetBtn{
-        margin-top: 20px;
-    }
+@media (max-width: 1280px) {
+  .container {
+    min-width: 70vw;
+    max-width: max-content;
+  }
+  input[type='submit'] {
+    padding: 7px;
+  }
+  span {
+    font-size: 0.8em;
+  }
+  #task {
+    width: 50%;
+    margin-left: 0px;
+    padding: 8px;
+  }
+  #task::placeholder {
+    font-size: 0.8em;
+  }
+  ul {
+    min-width: max-content;
+  }
+  ul li {
+    font-size: 0.8em;
+    margin: auto;
+    margin-bottom: 10px;
+    min-width: 45vw;
+  }
+  .delete {
+    margin-left: 5px;
+  }
+  #resetBtn {
+    margin-top: 20px;
+  }
 }
-@media(max-width: 320px){ 
-    html{
-        font-size: 0.6em;
-    }
+@media (max-width: 320px) {
+  html {
+    font-size: 0.6em;
+  }
 }
